tests/miz/pass/types/pass_type_elaboration_source_binding_context_shadowing_001.miz
reserve x for set;
definition
  let x be set;
end;
