tests/miz/fail/types/fail_type_elaboration_attribute_definition_gap_001.miz
definition
  let x be set;
  attr AttributePayloadBoundary: x is marked means thesis;
end;
